Use built storybook for CI

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,10 @@
     "start:playwright": "pnpm i18n:copy-test-locales && pnpm start",
     "prod": "pnpm build && pnpm start",
     "prod:playwright": "pnpm i18n:copy-test-locales && pnpm prod",
+    "prod:storybook": "pnpm i18n:copy-test-locales && pnpm storybook:build && pnpm storybook:start",
     "storybook": "storybook dev --port 54000",
     "storybook:build": "pnpm i18n:copy-test-locales && storybook build",
-    "storybook:build-for-docs": "pnpm install & pnpm i18n:en && NODE_OPTIONS=--openssl-legacy-provider nuxt storybook build",
+    "storybook:start": "pnpx http-server storybook-static -p 54000 -s",
     "talkback": "node ./test/proxy.js",
     "prepare:nuxt": "pnpm i18n:en && npx nuxi prepare",
     "test": "pnpm test:unit && pnpm test:playwright",
