--- a/.github/actions/build-docs/action.yml
+++ b/.github/actions/build-docs/action.yml
@@ -21,6 +21,7 @@ runs:
       shell: bash
       run: |
         just frontend/run storybook:build
+        cp frontend/src/public/favicon_storybook.svg frontend/storybook-static/favicon.svg
 
     # Storybook will be available at `/storybook`
     - name: Merge all docs
